--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.5.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
