--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.5.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+
 
 
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
