--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Capstone"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".coins.presentation.BooksActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Capstone.NoActionBar">
