--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
     implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     testImplementation 'junit:junit:4.+'
     testImplementation 'io.mockk:mockk:1.12.2'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
