--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     testImplementation 'io.mockk:mockk:1.12.2'
     testImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
